backport: re PR target/38054 (Assertion failed in change_decl_assembler_name())

Backport from mainline:
        PR target/38054
	* config/i386/winnt.c (i386_pe_encode_section_info): Condition stdcall
	decoration of function RTL names here on Ada language.

From-SVN: r142429